--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     justify-content: space-between;
     min-height: 100vh;
-    gap: 20em;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -12,7 +13,23 @@ body {
     flex-direction: column;
     align-items: center;
     align-self: center;
-    gap: 8px;
+    justify-content: center;
+    flex: 1;
+
+}
+
+.calc {
+    display: flex;
+    flex-direction: column;
+
+    border: 8px;
+    border-color: #273746e4;
+    border-style: solid;
+    border-radius: 15px;
+    width: 220px;
+    height: 300px;
+
+    background-color: #273746e4;
 }
 
 
@@ -22,14 +39,99 @@ body {
     justify-content: center;
     gap: 8px;
     width: 500px;
+
 }
+
+
+
 
 .display {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    gap: 8px;
+    height: 45px;
+    padding: 4px;
+    border-bottom: 8px;
+    border-style: solid;
+    border-color: #273746e4;
+    background-color: #273746e4;
+    text-align: end;
+    color: #f5f5f5;
 }
+
+
+#up {
+    flex-grow: 1;
+    font-size: 11px;
+    height: 12px;
+    align-content: center;
+}
+
+#down {
+    flex-grow: 3;
+    align-content: center;
+    font-size: 22px;
+}
+
+button {
+
+    border: 1px;
+    border-radius: 5px;
+    border-style: ridge;
+    border-color: #01080f4e;
+    background-color: rgb(0, 112, 186);
+    color: #f5f5f5;
+    font-weight: bold;
+}
+
+.buttonsTop {
+    display: flex;
+    height: 25%;
+    gap: 0px;
+}
+
+.buttonsTop button {
+    flex: 1;
+}
+
+
+
+
+.buttonsBottom {
+    display: flex;
+    flex-direction: row;
+    flex-basis: 100%;
+    justify-content: space-between;
+}
+
+.buttonsLeft {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.buttonsLeft button {
+    flex: 1;
+    width: 33%;
+    flex-basis: 33%;
+}
+
+.buttonsRight {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+
+.buttonsRight button {
+
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 1;
+    flex: 1;
+    justify-content: center;
+}
+
+
+
 
 
 label {
@@ -40,10 +142,10 @@ label {
 
 input {
     background: var(--accent);
-    border-radius: 16px;
+
     padding: 1ex 2ex;
     color: rgb(22, 22, 22);
-    width: 150px;
+    width: auto;
     text-align: right;
 
 }
@@ -70,4 +172,5 @@ input {
     padding-left: 16px;
     text-align: center;
     margin-top: auto;
+
 }
