--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ body {
     margin: 0;
     justify-content: space-between;
     min-height: 100vh;
-    font-size: 20px;
+    font-size: 22px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.biggerFont {
+    font-size: 22px;
 }
 
 .container {
@@ -53,23 +57,24 @@ body {
     border-bottom: 8px;
     border-style: solid;
     border-color: #273746e4;
-    background-color: #273746e4;
+    background-color: #3b516547;
     text-align: end;
     color: #f5f5f5;
 }
 
 
-#up {
+.up {
     flex-grow: 1;
     font-size: 11px;
     height: 12px;
     align-content: center;
 }
 
-#down {
+.down {
     flex-grow: 3;
     align-content: center;
     font-size: 22px;
+    background-color: #3b516547;
 }
 
 button {
@@ -78,19 +83,34 @@ button {
     border-radius: 5px;
     border-style: ridge;
     border-color: #01080f4e;
-    background-color: rgb(0, 112, 186);
+    background-color: rgb(45, 129, 184);
     color: #f5f5f5;
     font-weight: bold;
+    font-size: 15px;
+}
+
+button:hover {
+    cursor: pointer;
+    filter: brightness(95%);
+}
+
+button:active {
+    position: relative;
+    top: 1px;
+    filter: brightness(85%);
+
 }
 
 .buttonsTop {
     display: flex;
     height: 25%;
     gap: 0px;
+
 }
 
 .buttonsTop button {
     flex: 1;
+    background-color: rgba(45, 129, 184, 0.745);
 }
 
 
@@ -119,6 +139,7 @@ button {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
+
 }
 
 .buttonsRight button {
@@ -128,6 +149,7 @@ button {
     flex-shrink: 1;
     flex: 1;
     justify-content: center;
+    background-color: rgba(45, 129, 184, 0.745);
 }
 
 
